leves alterações na escrita e adição de alertas

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
                 <div class="tab-content" id="tools-tab">
                     <h2>Ferramentas Recomendadas</h2>
-                    <h3>(Use Ferramentas de Terceiros com Cautela!)</h3>
+                    <h3>(Use ferramentas de terceiros com cautela!)</h3>
 
                     <div class="form-group">
                         <label for="tool-category">Categoria:</label>
@@ -190,6 +190,9 @@
                 </div>
 
                 <h2>Links Rápidos</h2>
+                <div id="history" class="" history-list">
+                    <p>(Tenha cautela na hora de utilizar comandos do sistema)</p>
+                </div>
                 <div class="quick-links">
                     <a href="#" id="hardware-guide">Guia de Hardware</a>
                     <a href="#" id="software-guide">Guia de Software</a>
