pequenas mudanças na lógica do código

--- a/index.html
+++ b/index.html
@@ -144,10 +144,8 @@
                             <option value="">Selecione uma categoria</option>
                             <option value="hardware">Hardware</option>
                             <option value="software">Software</option>
-                            <option value="network">Rede</option>
+                            <option value="rede">Rede</option>
                             <option value="performance">Desempenho</option>
-                            <option value="maintenance">Manutenção</option>
-                            <option value="tools">Ferramentas</option>
                         </select>
                     </div>
 
